--- a/service/app/static/ts/package.json
+++ b/service/app/static/ts/package.json
@@ -13,7 +13,17 @@
   "dependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.12.1",
     "@types/es6-promise": "^3.3.0",
-    "axios": "^0.21.1",
+    "axios": "^0.21.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
+    "eslint": "^7.16.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   }
-}
+}       
